gccida/c3/expand_inline_function
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1138:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1145:4: error: expected ';' after expression
rtx v35; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1145:5: error: use of undeclared identifier 'v35'
rtx v35; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1149:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1160:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1160:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1167:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1167:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1170:4: error: expected ';' after expression
rtx v60; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1170:5: error: use of undeclared identifier 'v60'
rtx v60; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1172:4: error: expected ';' after expression
rtx v62; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1172:5: error: use of undeclared identifier 'v62'
rtx v62; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1174:4: error: expected ';' after expression
rtx v64; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1174:5: error: use of undeclared identifier 'v64'
rtx v64; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1181:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1181:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1194:4: error: expected ';' after expression
rtx v84; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1194:5: error: use of undeclared identifier 'v84'
rtx v84; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/integrate.c:1199:4: error: expected ';' after expression
rtx rtl; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inline_function/src/obj/integrate.o] Error 1
